--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/pancake": "^0.0.18",
 		"daisyui": "^2.51.4",
 		"pocketbase": "^0.12.1"
 	}
