--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.21",
 		"svelte": "^3.54.0",
@@ -23,6 +24,9 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/pancake": "^0.0.18",
+		"@tiptap/core": "^2.0.0-beta.220",
+		"@tiptap/pm": "^2.0.0-beta.220",
+		"@tiptap/starter-kit": "^2.0.0-beta.220",
 		"daisyui": "^2.51.4",
 		"pocketbase": "^0.12.1"
 	}
