--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@sveltejs/pancake": "^0.0.18",
 		"@tiptap/core": "^2.0.0-beta.220",
+		"@tiptap/extension-text-align": "^2.0.0-beta.220",
 		"@tiptap/pm": "^2.0.0-beta.220",
 		"@tiptap/starter-kit": "^2.0.0-beta.220",
 		"daisyui": "^2.51.4",
