--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/pancake": "^0.0.18",
+		"@tensorflow/tfjs": "^4.2.0",
 		"@tiptap/core": "^2.0.0-beta.220",
 		"@tiptap/extension-text-align": "^2.0.0-beta.220",
 		"@tiptap/pm": "^2.0.0-beta.220",
